--- a/styleshomepage.css
+++ b/styleshomepage.css
@@ -16,9 +16,11 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 120px;
-    border-bottom: 1px solid grey;
+    margin-bottom: 90px;
+    /*border-bottom: 1px solid grey;*/
     font-family: 'Poppins', sans-serif;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .navbar img{
@@ -27,11 +29,27 @@ nav{
     object-fit: cover;
 }
 nav .logo{
-    
+    display: flex;
+    align-items: center;
+    /*background-color: lightpink;*/
+    width: 30%;
+}
+nav .logo h2{
+
 }
 .search-icon{
     list-style: none;
+    height: 60px;
+    width: 250px;
+    /*background-color: lightpink;*/
+    display: flex;
+    align-items: center;
 }
+.search-icon input{
+    width: 250px;
+    height: 40px;
+}
+
 nav ul{
     display: flex;
     justify-content: space-around;
@@ -123,14 +141,17 @@ nav ul li .navgreen:hover {
 
 .titel {
     background-color: white;
-    width: 1000px;
+
     padding: 20px 20px;
 }
 .titel h1{
     text-align: center;
-    font-size: 40px;
+    font-size: 70px;
+    font-weight: bold;
+    letter-spacing: 5px;
     text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
+    /*background-color: lightseagreen;*/
 }
 
 .gridContainer {
