--- a/styleshomepage.css
+++ b/styleshomepage.css
@@ -18,11 +18,19 @@ nav{
     justify-content: space-around;
     margin-bottom: 90px;
     /*border-bottom: 1px solid grey;*/
+    position: fixed;
+    top: 0;
+    left: 0;
     font-family: 'Poppins', sans-serif;
     padding-left: 5%;
     padding-right: 5%;
+    z-index: 1;
 }
+nav.nav-effect{
+    background: lightpink;
+    
 
+}
 .navbar img{
     width: 60px;
     height: 60px;
@@ -132,6 +140,7 @@ nav ul li .navgreen:hover {
 .categories-container{
     width: 100%;
     height: 100%;
+    margin-top: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -184,7 +193,7 @@ nav ul li .navgreen:hover {
     border-radius: 50%;
 }
 
-img:hover{
+.imgage-container:hover img{
     opacity: 0.5;
 }
 
