--- a/styleshomepage.css
+++ b/styleshomepage.css
@@ -28,9 +28,8 @@ nav{
 }
 nav.nav-effect{
     background: lightpink;
-    
-
 }
+
 .navbar img{
     width: 60px;
     height: 60px;
@@ -67,6 +66,9 @@ nav ul{
     justify-content: space-around;
     width:25%;
     }
+
+/*MEDIA QUERY*/
+
 @media screen and (max-width: 1024px){
     nav ul{
         display: flex;
