--- a/style-recipe-page.css
+++ b/style-recipe-page.css
@@ -7,15 +7,156 @@
 
   --red: red;
   --orange: orange;
-  --yellow: yellow;
+  --yellow: #fad73c;
   --green: green;
-  --blue: blue;
+  --purple: purple;
+  --title-font: "Times New Roman", Times, serif;
 }
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
-  font-size: 2rem;
+  margin-top: 0;
+  font-family: var(--title-font);
+  font-size: 2.5rem;
+}
+
+h2 {
+  margin: 0 auto 2rem auto;
+  text-align: center;
+  font-family: var(--title-font);
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .column {
+    flex: 1;
+  }
+}
+
+.rcp-summary,
+.rcp-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+/* HEADER */
+
+.rcp-image {
+  min-height: 60vh;
+  flex-wrap: wrap;
+
+  background-image: url("./images/rapsberry.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.rcp-details {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 4rem;
+  border: 1px solid red;
+}
+
+.stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.star {
+  font-size: 1rem;
+  color: var(--yellow);
+  padding: 2px;
+}
+
+.share-btn {
+  margin-left: 1rem;
+  padding: 0.5rem;
+  border-radius: 4px;
+  background-color: var(--red);
+
+  font-size: 0.75rem;
+  font-weight: 700;
+  text-decoration: none;
+  color: white;
+}
+
+.share-btn:hover {
+  background-color: var(--green);
+}
+
+i.fa-share-alt:hover {
+  background-color: var(--purple);
+}
+
+.rcp-description {
+  padding: 54px 0;
+}
+
+.p-infos-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.pratical-infos {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 0;
+  margin-right: 1.5rem;
+}
+
+.pratical-infos img {
+  height: 3rem;
+  padding-right: 0.5rem;
+  margin: 0;
+}
+
+.info {
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.info-categorie {
+  text-align: center;
+  font-size: 0.75rem;
+  font-weight: 700;
+}
+
+.ingredients-content {
+  padding: 4rem;
+  border: 1px solid red;
+}
+
+.ingredients-content table {
+  table-layout: auto;
+  width: 100%;
+  border-spacing: 0.5rem;
+}
+
+.ingredients-content td {
+  padding: 0.5rem;
+  border-bottom: 2px solid black;
+}
+
+.quantity {
+  width: 25%;
+  margin-right: 1rem;
+}
+
+.ingredient {
+  width: auto;
 }
