--- a/style-recipe-page.css
+++ b/style-recipe-page.css
@@ -2,6 +2,7 @@
 :root {
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5rem;
 
   /* VARIABLES */
 
@@ -21,6 +22,7 @@ body {
 h1 {
   margin-top: 0;
   font-family: var(--title-font);
+  line-height: 3.5rem;
   font-size: 2.5rem;
 }
 
@@ -30,10 +32,35 @@ h2 {
   font-family: var(--title-font);
 }
 
+h3 {
+  position: relative;
+}
+
+h3 span {
+  background-color: white;
+  padding-right: 10px;
+}
+
+h3:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 0.75rem;
+  border-top: 2px solid grey;
+  z-index: -1;
+}
+
 .column {
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
+}
+
+/* general padding for the columns */
+.gnrl-padding {
+  padding: 4rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -49,10 +76,11 @@ h2 {
   flex-wrap: wrap;
   width: 100%;
 }
+
 /* HEADER */
 
 .rcp-image {
-  min-height: 60vh;
+  min-height: 100vh;
   flex-wrap: wrap;
 
   background-image: url("./images/rapsberry.jpg");
@@ -65,8 +93,6 @@ h2 {
   display: flex;
   flex: 1;
   flex-direction: column;
-  padding: 4rem;
-  border: 1px solid red;
 }
 
 .stars {
@@ -136,9 +162,17 @@ i.fa-share-alt:hover {
   font-weight: 700;
 }
 
+/* INGREDIENTS COLUMN */
+
 .ingredients-content {
-  padding: 4rem;
-  border: 1px solid red;
+  position: -webkit-sticky;
+  position: sticky;
+  margin: 2rem;
+  padding: 2rem;
+  top: 2rem;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  box-shadow: 8px 8px 8px lightgray;
 }
 
 .ingredients-content table {
@@ -153,10 +187,16 @@ i.fa-share-alt:hover {
 }
 
 .quantity {
-  width: 25%;
-  margin-right: 1rem;
+  width: 30%;
+  margin-right: 0.5rem;
 }
 
 .ingredient {
   width: auto;
+}
+
+/* PREPARATION COLUMN */
+
+.rcp-steps p {
+  margin-bottom: 3rem;
 }
