--- a/styleshomepage.css
+++ b/styleshomepage.css
@@ -43,8 +43,9 @@ nav .logo{
     /*background-color: lightpink;*/
     width: 30%;
 }
-nav .logo h2{
-
+nav .logolink{
+    text-decoration: none;
+    color: black;
 }
 /*SEARCHBOX*/
 
