changing color of rhubarb cake recipe title

--- a/redrecipe.css
+++ b/redrecipe.css
@@ -98,6 +98,10 @@ h1 {
   position: relative;
 }
 
+.recipeLink{
+  color: black;
+}
+
 .recipedescription {
   position: absolute;
   text-align: left;
