--- a/styleshomepage.css
+++ b/styleshomepage.css
@@ -291,16 +291,130 @@ nav ul li .navgreen:hover {
    
 }
 
-@media (max-width: 992px) {
+@media screen and (max-width: 1400px){
+  
+    .gridContainer {
+        display: grid;
+        grid-template-columns: repeat(15, 40px);
+        grid-template-rows: repeat(10, 40px);
+        width: 80%;
+        background-color: white;
+        justify-content: center;
+        }
 
-    .image-container{
-        width: 50%;
-        height: 100px;
-    }
+        .magic-1{
+            grid-column: 1 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-2{
+            grid-column:  5 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-3{
+            grid-column:  9 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-4{
+            grid-column:  1 / span 5;
+            grid-row: 5 / span 5;
+        }
+        
+        .magic-5{
+            grid-column:  5 / span 5;
+            grid-row: 5 / span 5;
+        }
+        
+        .magic-6{
+            grid-column:  9 / span 5;
+            grid-row: 5 / span 5;
+        }   
+
 }
 
-@media (max-width: 576px) {
+@media screen and (max-width: 1024px){
+    .gridContainer {
+        display: grid;
+        grid-template-columns: repeat(10, 40px);
+        grid-template-rows: repeat(15, 40px);
+        width: 80%;
+        background-color: white;
+        justify-content: center;
+        }
 
+        .magic-1{
+            grid-column: 1 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-2{
+            grid-column:  5 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-3{
+            grid-column:  1 / span 5;
+            grid-row: 5 / span 5;
+        }
+        
+        .magic-4{
+            grid-column:  5 / span 5;
+            grid-row: 5 / span 5;
+        }
+        
+        .magic-5{
+            grid-column:  1 / span 5;
+            grid-row: 9 / span 5;
+        }
+        
+        .magic-6{
+            grid-column:  5 / span 5;
+            grid-row: 9 / span 5;
+        }
+}
+
+
+@media (max-width: 700px) {
+    .gridContainer {
+        display: grid;
+        grid-template-columns: repeat(5, 40px);
+        grid-template-rows: repeat(18, 40px);
+        width: 80%;
+        background-color: white;
+        justify-content: center;
+        }
+
+        .magic-1{
+            grid-column: 1 / span 5;
+            grid-row: 1 / span 5;
+        }
+        
+        .magic-2{
+            grid-column:  1 / span 5;
+            grid-row: 5 / span 5;
+        }
+        
+        .magic-3{
+            grid-column:  1 / span 5;
+            grid-row: 9 / span 5;
+        }
+        
+        .magic-4{
+            grid-column:  1 / span 5;
+            grid-row: 13 / span 5;
+        }
+        
+        .magic-5{
+            grid-column:  1 / span 5;
+            grid-row: 17 / span 5;
+        }
+        
+        .magic-6{
+            grid-column:  1 / span 5;
+            grid-row: 9 / span 5;
+        }
 }
 
 footer div {
