--- a/redrecipe.css
+++ b/redrecipe.css
@@ -7,7 +7,7 @@
 
 .banner {
   position: relative;
-  height: 600px;
+  height: 100vh;
   top: 100px;
   margin-bottom: 140px;
 }
@@ -24,7 +24,7 @@
   top: 30%;
   left: 10%;
   width: 40%;
-  height: 50%;
+  height: 30%;
   display: flex;
 }
 
